@@ -1175,6 +1175,19 @@ enum
     SPR_RIDE_DESIGN_PREVIEW_CLASSIC_WOODEN_ROLLER_COASTER_TRACK,
     SPR_RIDE_DESIGN_PREVIEW_CLASSIC_WOODEN_ROLLER_COASTER_SUPPORTS,
 
+    SPR_G2_WOODEN_RC_25_60_SWNE_CHAINED,
+    SPR_G2_WOODEN_RC_25_60_SENW_CHAINED,
+    SPR_G2_WOODEN_RC_25_60_SWNE_CHAINED_BACK,
+    SPR_G2_WOODEN_RC_25_60_SENW_CHAINED_BACK,
+    SPR_G2_WOODEN_RC_60_SWNE_CHAINED,
+    SPR_G2_WOODEN_RC_60_SENW_CHAINED,
+    SPR_G2_WOODEN_RC_60_SWNE_CHAINED_BACK,
+    SPR_G2_WOODEN_RC_60_SENW_CHAINED_BACK,
+    SPR_G2_WOODEN_RC_60_25_SWNE_CHAINED,
+    SPR_G2_WOODEN_RC_60_25_SENW_CHAINED,
+    SPR_G2_WOODEN_RC_60_25_SWNE_CHAINED_BACK,
+    SPR_G2_WOODEN_RC_60_25_SENW_CHAINED_BACK,
+
     SPR_G2_BM_INVERT_BOOSTER_1,
     SPR_G2_BM_INVERT_BOOSTER_2,
 
